docs(docs-infra): Fix overflow styles in cards code examples (#58704)
PR Close #58704

--- a/adev/shared-docs/styles/docs/_code.scss
+++ b/adev/shared-docs/styles/docs/_code.scss
@@ -276,6 +276,12 @@
       overflow-x: auto;
       display: flex;
       flex-direction: column;
+      align-items: start;
+    }
+
+    pre > * {
+      min-width: 100%;
+      width: auto;
     }
   }
 
